--- a/stylevideo.css
+++ b/stylevideo.css
@@ -65,3 +65,61 @@ body
 {
     font-size: 12px;
 }
+
+/********* Superposition simple de texte sur une image *******/
+
+/* Conteneur principal */
+.overlay {
+	position: relative;
+	width: 100%;
+}
+
+/* Image originale */
+.overlay .images
+{
+	position:relative;
+	margin-left : 50px;
+	margin-right: 50px;
+	margin-top : 50px;
+	margin-bottom : 50px;
+	border : none;
+	border-radius: 5px;
+	height:300px;
+	width:300px;
+}
+
+.overlay:hover .images
+{
+ transform: scale(1.2);
+ transition: .5s ease;
+ opacity : 0.7;
+}
+
+/********* Hover image et texte *******/
+
+/* Overlay */
+.overlay .text-clear {
+	position: absolute;
+	top : 50px;
+	left : 50px;
+	text-align : center;
+	height: 300px;
+	width: 300px;
+	opacity: 0;
+	transition: .5s ease; /*enchainement en fondu*/
+}
+
+/* Apparition overlay sur passage souris */
+.overlay:hover .text-clear {
+ opacity: 1;
+ /* transform: scale(1.2); */
+ transform: rotate(1turn);
+}
+
+.overlay .text {
+	position : relative;
+	font-size : 30px;
+	color : white;
+	text-shadow: 2px 2px 2px #000;
+	top: 40%;
+}
