--- a/stylevideo.css
+++ b/stylevideo.css
@@ -6,7 +6,8 @@
 body
 {
    margin-top: -24px !important;
-   background-color: #000000 !important;
+   background-color: #e8e8e8 !important;
+   color : #444444 !important;
 }
  
 .avatar
@@ -43,6 +44,8 @@ body
 {
     text-align: center;
     border-top: none !important;
+	border-bottom : 1px solid #ffb7b7;
+	color : #444444;
 }
 
 .head-table-genre
@@ -66,6 +69,66 @@ body
     font-size: 12px;
 }
 
+/*Box de fond*/
+.card-entete
+{
+	background-color : rgba(13,106,173,0.8) !important;
+	font-size : 20px !important;
+	color : #f2f2f2;
+	font-weight : bold;
+	/* border : 1px solid #cccccc; */
+}
+
+.card-corps
+{
+	font-size : 15px !important;
+	color : #444444 !important;
+}
+
+.logo
+{
+	border-radius : 5px;
+	width : 100px;
+	box-shadow : 2px 5px 5px rgba(0,0,0,0.2);
+}
+
+.menu
+{
+	width : 100%;
+	height : 150px;
+}
+
+.btn-menu
+{
+	background-color : rgba(255,255,255,0.4);
+	color : #ffffff;
+}
+
+.btn-menu:hover
+{
+	background-color : rgba(255,255,255,0.2);
+}
+
+.fond-sous-onglets-menu
+{
+	
+}
+
+.sous-onglets-menu
+{
+	text-align : center;
+}
+
+.menu-link
+{
+	text-decoration : none !important;
+	color : rgb(13,106,173);
+}
+
+.menu-link:hover
+{
+	color : rgba(13,106,173,0.6);
+}
 /********* Superposition simple de texte sur une image *******/
 
 /* Conteneur principal */
@@ -128,8 +191,8 @@ body
 {
 	position : relative;
 	font-size : 30px;
-	color : white;
-	text-shadow: 2px 2px 2px #000;
+	color : #0d6aad;
+	text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 	top: 0%;
 }
 
@@ -137,7 +200,7 @@ body
 {
 	position : relative;
 	font-size : 15px;
-	color : white;
-	text-shadow: 2px 2px 2px #000;
+	color : #444444;
+	text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 	top: 0%;
 }
