--- a/stylevideo.css
+++ b/stylevideo.css
@@ -43,9 +43,9 @@ body
 .head-table-connexion
 {
     text-align: center;
-    border-top: none !important;
-	border-bottom : 1px solid #ffb7b7;
-	color : #444444;
+	border: none !important;
+	/*border-bottom : 1px solid #0d6aad;*/
+	color : #0d6aad;
 }
 
 .head-table-genre
@@ -57,6 +57,7 @@ body
 .td-table
 {
     text-align: center;
+	border-top: none !important;
 }
 
 .text-red
